<resources>
    <string name="app_name">SchoolDiary</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_teacher_home">TeacherHomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="hint_name">Fullname</string>
    <string name="title_activity_parent_home">ParentHomeActivity</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Interaction!</string>
    <string name="slide_1_desc">The easiest way to interact with teacher and parent!</string>

    <string name="slide_2_title">Student Details!</string>
    <string name="slide_2_desc">Student details in your hand!</string>

    <string name="slide_3_title">Schedule!</string>
    <string name="slide_3_desc">Schedule of all function held on school!</string>

    <string name="slide_4_title">All fun.!</string>
    <string name="slide_4_desc">Fun with this School Diary app!</string>

</resources>
